--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,74 @@
-<h1 class="bg-gray-800 rounded-lg p-4 text-center text-white">
-  App Assign Week 2
-</h1>
+<app-header></app-header>
+<div class="flex w-2/4 mt-2 mx-auto justify-evenly">
+  <button mat-raised-button (click)="toggle()" [ngClass]="isEleve ? 'bg-yellow-600': '' " class="bg-yellow-500 rounded-lg w-32 text-white p-2">
+   <mat-icon>person</mat-icon> Eléves
+  </button>
+  <button mat-button (click)="toggle()" [ngClass]="!isEleve ? 'bg-yellow-600': '' " class="bg-yellow-500 w-32 p-2 rounded-md text-white">
+    <mat-icon>school</mat-icon> Classes
+  </button>
+</div>
+<div class="container mt-4 mx-auto">
+  <!-- eleve part -->
+  <div class="flex flex-wrap row justify-between items-start" *ngIf="isEleve">
+    <!-- table -->
+    <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
+      <thead>
+        <tr>
+          <th  class="p-4">Matricule</th>
+          <th  class="p-4">Nom</th>
+          <th  class="p-4">Prenom</th>
+          <th  class="p-4">Date de naissance</th>
+          <th  class="p-4">actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="border-b border-2" *ngFor="let item of students">
+          <td>{{ item.matricule }}</td>
+          <td>{{ item.name }}</td>
+          <td>{{ item.lastName }}</td>
+          <td>{{ item.date_naiss }}</td>
+          <td>
+            <button mat-button (click)="delete(item.matricule)" class="text-red-500 text-white" ><mat-icon>delete</mat-icon></button>
+            <button mat-button (click)="edit(item.matricule)" class="text-gray-500 text-white"><mat-icon> edit </mat-icon></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- end of table -->
+    <!-- form part -->
+    <div class="form w-1/3">
+      <form action="" (ngSubmit)="saveEleve()">
+      <p>
+      <label for="matricule">Matricule</label> <br>
+      <input required type="text" name="matricule" id="matricule" class="border-2 w-full p-2 border-yellow-500 rounded-md" [(ngModel)]="student.matricule" placeholder="matricule"> 
+      </p>
+      <p>
+        <label for="nom">Nom</label> <br>
+        <input  required type="text" name="nom" id="nom" class="border-2 p-2 w-full border-yellow-500" placeholder="nom" [(ngModel)]="student.name"> 
+      </p>
+      <p class="block ">
+        <label for="prenom">Prenom</label> <br>
+        <input  required type="text" name="prenom" id="prenom" class="border-2 p-2 w-full border-yellow-500" placeholder="prenom" [(ngModel)]="student.lastName">
+      </p>
+      <p class="block w-100">
+        <label for="date_naiss">Date de naissance</label> <br>
+        <input  required type="date" name="date_naiss" id="date_naiss" class="border-2 w-full p-2 border-yellow-500" [(ngModel)]="student.date_naiss" > 
+      </p>
+      <p class="mt-3 "> 
+        <button type="submit" mat-flat-button class="bg-yellow-500 w-full text-white" ><mat-icon>save</mat-icon> Save</button>
+      </p>
+    </form>
+    </div>
+    <!-- end of form part -->
+  </div>
+  <!--Classe  -->
+  <div class="classe" *ngIf="!isEleve">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illo numquam placeat temporibus omnis maxime suscipit itaque. Nesciunt obcaecati reprehenderit nobis porro rerum et, facere fuga dolorum laudantium asperiores eveniet?
+      Tempore, voluptatibus fugiat velit aut voluptatum quo nam corporis sapiente repudiandae voluptate ex autem nemo, ipsam tenetur minus sunt, a eius quaerat atque similique repellat corrupti. Nobis alias qui molestiae!
+      Animi corrupti maxime rerum id! Illum dignissimos harum hic repudiandae saepe delectus perferendis porro, similique reprehenderit cupiditate necessitatibus vitae animi non molestiae repellendus, ad nemo a iusto! Nostrum, sed ducimus!
+      Quas voluptatum magni molestias eaque illum eius, inventore, molestiae minima sint nesciunt beatae veritatis excepturi? Explicabo architecto quia repellendus non molestiae. Alias quasi voluptatibus nihil nisi in eius enim rem?
+    </p>
+  </div>
+</div>
+<app-footer></app-footer>
