--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,21 @@
 <app-header></app-header>
-<div class="flex w-2/4 mt-2 mx-auto justify-evenly">
-  <button mat-raised-button (click)="toggle()" [ngClass]="isEleve ? 'bg-yellow-600': '' " class="bg-yellow-500 rounded-lg w-32 text-white p-2">
-   <mat-icon>person</mat-icon> Eléves
+<div class="flex w-2/4 mt-2 mx-auto justify-around">
+  <button mat-raised-button (click)="toggle('eleve')" [ngClass]="showElement == 'eleve' ? 'bg-gray-600': '' " class="bg-yellow-500 rounded-lg w-32 text-white p-2">
+   <mat-icon>person</mat-icon> Eléves <span class="ml-1" matBadge="{{students.length}}"  matBadgeOverlap="false"></span>
   </button>
-  <button mat-button (click)="toggle()" [ngClass]="!isEleve ? 'bg-yellow-600': '' " class="bg-yellow-500 w-32 p-2 rounded-md text-white">
-    <mat-icon>school</mat-icon> Classes
+  <button mat-raised-button (click)="toggle('classe')" [ngClass]="showElement == 'classe' ? 'bg-gray-600': '' " class="bg-yellow-500 w-32 p-2 rounded-md text-white">
+    <mat-icon>school</mat-icon> Classes <span class="ml-1" matBadge="{{classes.length}}"  matBadgeOverlap="false"></span>
+  </button>
+  <button mat-raised-button (click)="toggle('affectation')" [ngClass]="showElement == 'affectation' ? 'bg-gray-600': '' " class="bg-yellow-500 w-32 p-2 rounded-md text-white">
+    <mat-icon>work</mat-icon> Affectation <span class="ml-1" matBadge="{{affectations.length}}"  matBadgeOverlap="false"></span>
+  </button>
+  <button mat-stroked-button onclick="location.reload()" class="bg-gray-300 w-32 p-2 rounded-md text-black">
+    <mat-icon>refresh</mat-icon> rafraichir
   </button>
 </div>
 <div class="container mt-4 mx-auto">
   <!-- eleve part -->
-  <div class="flex flex-wrap row justify-between items-start" *ngIf="isEleve">
+  <div class="flex flex-wrap row justify-between items-start" *ngIf="showElement == 'eleve'">
     <!-- table -->
     <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
       <thead>
@@ -26,9 +32,9 @@
           <td>{{ item.matricule }}</td>
           <td>{{ item.name }}</td>
           <td>{{ item.lastName }}</td>
-          <td>{{ item.date_naiss }}</td>
+          <td>{{ item.date_naiss | date }}</td>
           <td>
-            <button mat-button (click)="delete(item.matricule)" class="text-red-500 text-white" ><mat-icon>delete</mat-icon></button>
+            <button mat-button (click)="deleteEleve(item.matricule)" class="text-red-500 text-white" ><mat-icon>delete</mat-icon></button>
             <button mat-button (click)="edit(item.matricule)" class="text-gray-500 text-white"><mat-icon> edit </mat-icon></button>
           </td>
         </tr>
@@ -37,7 +43,7 @@
     <!-- end of table -->
     <!-- form part -->
     <div class="form w-1/3">
-      <form action="" (ngSubmit)="saveEleve()">
+      <form action="" (ngSubmit)="saveEleve(student.matricule)">
       <p>
       <label for="matricule">Matricule</label> <br>
       <input required type="text" name="matricule" id="matricule" class="border-2 w-full p-2 border-yellow-500 rounded-md" [(ngModel)]="student.matricule" placeholder="matricule"> 
@@ -62,7 +68,46 @@
     <!-- end of form part -->
   </div>
   <!--Classe  -->
-  <div class="classe" *ngIf="!isEleve">
+  <div class="flex justify-around mt-4" *ngIf="showElement == 'classe'">
+    <!-- table -->
+    <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
+      <thead>
+        <tr>
+          <th  class="p-4">Code</th>
+          <th  class="p-4">Nomination</th>
+          <th  class="p-4">actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="border-b border-2" *ngFor="let item of classes">
+          <td>{{ item.code }}</td>
+          <td>{{ item.nomination }}</td>
+          <td>
+            <button mat-button (click)="deleteClasse(item.code)" class="text-red-500 text-white" ><mat-icon>delete</mat-icon></button>
+            <button mat-button (click)="editClasse(item.code)" class="text-gray-500 text-white"><mat-icon> edit </mat-icon></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- form  -->
+    <div class="form w-1/3">
+      <form action="" (ngSubmit)="saveEleve(student.matricule)">
+      <p>
+      <label for="matricule">Matricule</label> <br>
+      <input required type="text" name="matricule" id="matricule" class="border-2 w-full p-2 border-yellow-500 rounded-md" [(ngModel)]="student.matricule" placeholder="matricule"> 
+      </p>
+      <p>
+        <label for="nom">Nom</label> <br>
+        <input  required type="text" name="nom" id="nom" class="border-2 p-2 w-full border-yellow-500" placeholder="nom" [(ngModel)]="student.name"> 
+      </p>
+      <p class="mt-3 "> 
+        <button type="submit" mat-flat-button class="bg-yellow-500 w-full text-white" ><mat-icon>save</mat-icon> Save</button>
+      </p>
+    </form>
+    </div>
+  </div>
+  <div class="affectation" *ngIf="showElement == 'affectation'" >
+    <h1>Affectation</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illo numquam placeat temporibus omnis maxime suscipit itaque. Nesciunt obcaecati reprehenderit nobis porro rerum et, facere fuga dolorum laudantium asperiores eveniet?
       Tempore, voluptatibus fugiat velit aut voluptatum quo nam corporis sapiente repudiandae voluptate ex autem nemo, ipsam tenetur minus sunt, a eius quaerat atque similique repellat corrupti. Nobis alias qui molestiae!
