--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,9 @@
 h1::first-letter{
     color: orange;
-    font-size: 30px;
+    font-size: 35px;
+    font-weight: bold;
 }
-html{
+body{
     -webkit-user-select: none;
 -khtml-user-select: none;
 -moz-user-select: none;
