--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
   <button mat-raised-button (click)="toggle('affectation')" [ngClass]="showElement == 'affectation' ? 'bg-gray-600': '' " class="bg-yellow-500 w-32 p-2 rounded-md text-white">
     <mat-icon>work</mat-icon> Affectation <span class="ml-1" matBadge="{{affectations.length}}"  matBadgeOverlap="false"></span>
   </button>
-  <button mat-stroked-button onclick="location.reload()" class="bg-gray-300 w-32 p-2 rounded-md text-black">
-    <mat-icon>refresh</mat-icon> rafraichir
+  <button mat-stroked-button onclick="location.reload()" class="rounded-md text-gray-500">
+    <mat-icon>refresh</mat-icon>
   </button>
 </div>
 <div class="container mt-4 mx-auto">
@@ -91,14 +91,14 @@
     </table>
     <!-- form  -->
     <div class="form w-1/3">
-      <form action="" (ngSubmit)="saveEleve(student.matricule)">
+      <form action="" (ngSubmit)="saveClasse(classe.code)">
       <p>
-      <label for="matricule">Matricule</label> <br>
-      <input required type="text" name="matricule" id="matricule" class="border-2 w-full p-2 border-yellow-500 rounded-md" [(ngModel)]="student.matricule" placeholder="matricule"> 
+      <label for="code">code</label> <br>
+      <input required type="text" [(ngModel)]="classe.code" name="code" id="code" class="border-2 w-full p-2 border-yellow-500 rounded-md" placeholder="code"> 
       </p>
       <p>
-        <label for="nom">Nom</label> <br>
-        <input  required type="text" name="nom" id="nom" class="border-2 p-2 w-full border-yellow-500" placeholder="nom" [(ngModel)]="student.name"> 
+        <label for="nomination">nomination</label> <br>
+        <input  required type="text" [(ngModel)]="classe.nomination" name="nomination" id="nomination" class="border-2 p-2 w-full border-yellow-500" placeholder="nomination"> 
       </p>
       <p class="mt-3 "> 
         <button type="submit" mat-flat-button class="bg-yellow-500 w-full text-white" ><mat-icon>save</mat-icon> Save</button>
@@ -106,14 +106,51 @@
     </form>
     </div>
   </div>
-  <div class="affectation" *ngIf="showElement == 'affectation'" >
-    <h1>Affectation</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illo numquam placeat temporibus omnis maxime suscipit itaque. Nesciunt obcaecati reprehenderit nobis porro rerum et, facere fuga dolorum laudantium asperiores eveniet?
-      Tempore, voluptatibus fugiat velit aut voluptatum quo nam corporis sapiente repudiandae voluptate ex autem nemo, ipsam tenetur minus sunt, a eius quaerat atque similique repellat corrupti. Nobis alias qui molestiae!
-      Animi corrupti maxime rerum id! Illum dignissimos harum hic repudiandae saepe delectus perferendis porro, similique reprehenderit cupiditate necessitatibus vitae animi non molestiae repellendus, ad nemo a iusto! Nostrum, sed ducimus!
-      Quas voluptatum magni molestias eaque illum eius, inventore, molestiae minima sint nesciunt beatae veritatis excepturi? Explicabo architecto quia repellendus non molestiae. Alias quasi voluptatibus nihil nisi in eius enim rem?
-    </p>
+  <div class="flex justify-around" *ngIf="showElement == 'affectation'" >
+    <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
+      <thead>
+        <tr>
+          <th  class="p-4">Nom eleve</th>
+          <th  class="p-4">Prenom Eleve</th>
+          <th  class="p-4">Nom classe </th>
+          <th  class="p-4">Code classe </th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="border-b border-2" *ngFor="let item of affectations">
+          <td>{{ item.eleve?.name }}</td>
+          <td>{{ item.eleve?.lastName }}</td>
+          <td>{{ item.classe.nomination }}</td>
+          <td>{{ item.classe.code }}</td>
+          <td>
+            <button mat-button (click)="deleteAffectation(item.id)" class="text-red-500 text-white" ><mat-icon>delete</mat-icon></button>
+            <button mat-button (click)="editAffectation(item.id)" class="text-gray-500 text-white"><mat-icon> edit </mat-icon></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="w-1/3">
+      <form action="" (ngSubmit)="saveAffectation(affectation.id)">
+        <p>
+        <label for="eleve">Choisir un éléve </label> <br>
+        <select required name="eleve" (change)="verifEleve()" [(ngModel)]="affectation.eleve" class="border-2 w-full p-2 border-yellow-500 rounded-md form-select"> 
+          <option value="" selected> --  choisir un éléve -- </option>
+          <option *ngFor="let item of students" [value]="item.matricule">{{ item.name }} {{ item.lastName }} {{ item.date_naiss  }} </option>
+        </select>
+        </p>
+        <p>
+        <label for="eleve">Choisir une classe </label> <br>
+        <select required name="classe" [(ngModel)]="affectation.classe" class="border-2 w-full p-2 border-yellow-500 rounded-md form-select"> 
+          <option value="" selected> --  choisir une classe -- </option>
+          <option *ngFor="let item of classes" [value]="item.code">{{ item.code }} {{ item.nomination }} </option>
+        </select>
+        </p>
+        <p class="mt-3 "> 
+          <button type="submit" mat-flat-button class="bg-yellow-500 w-full text-white" ><mat-icon>save</mat-icon> Save</button>
+        </p>
+      </form>
+    </div>
   </div>
 </div>
 <app-footer></app-footer>
