--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,6 +51,7 @@
     <!-- end of table -->
     <!-- form part -->
     <div class="form w-1/3">
+      <h1 class="text-2xl text-center" >Formulaire d'ajout d'un éléve </h1>
       <form action="" (ngSubmit)="saveEleve(student.matricule)">
         <p>
           <label for="matricule">Matricule</label> <br>
@@ -110,6 +111,7 @@
     </table>
     <!-- form  -->
     <div class="form w-1/3">
+      <h1 class="text-2xl text-center" >Formulaire d'ajout d'une classe </h1>
       <form action="" (ngSubmit)="saveClasse(classe.code)">
         <p>
           <label for="code">code</label> <br>
@@ -164,6 +166,7 @@
     </table>
     <!-- form affectation -->
     <div class="w-1/4 text-center mx-auto">
+      <h1 class="text-2xl text-center" >Formaulaire d'affectation </h1>
       <form action="" (ngSubmit)="saveAffectation(affectation.id)">
         <p>
           <label for="eleve">Choisir un éléve </label> <br>
