--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer class="bg-gray-800 text-white flex items-center justify-center">
-&copy;Diokou Tech 2022
-</footer>   
+&copy; 2022 Diokou Tech
+</footer>
+    
