--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,18 @@
-<h1 class="bg-gray-600 text-2xl p-4 text-center text-white">
+<div class="bg-gray-600 text-center flex-wrap text-white flex justify-around items-center">
+  <span class="text-2xl p-4">
     Sama School App
-  </h1>
+  </span>
+  <nav>
+    <ul class="flex items-center p-4 justify-center">
+      <li>
+      <a href="/eleve" mat-button><mat-icon>person</mat-icon> Eleves </a>
+      </li>
+      <li>
+        <a href="/classe" mat-button><mat-icon>school</mat-icon> Classes </a>
+        </li>
+        <li>
+          <a href="/affectation" mat-button><mat-icon>work</mat-icon> Affectations </a>
+        </li>
+    </ul>
+  </nav>
+</div>
