--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<router-outlet></router-outlet>
 <div class="flex w-2/4 mt-2 mb-4 mx-auto justify-around">
   <button mat-raised-button (click)="toggle('eleve')"
     [ngClass]="showElement==='eleve' ? 'bg-gray-600': 'bg-yellow-500' " class=" rounded-lg w-32 text-white p-2">
@@ -75,7 +76,7 @@
             [(ngModel)]="student.date_naiss">
         </p>
         <p class="mt-3 ">
-          <button type="submit" mat-flat-button class="bg-yellow-500 w-full text-white">
+          <button type="submit" mat-raised-button class="bg-yellow-500 w-full text-white">
             <mat-icon>save</mat-icon> Save
           </button>
         </p>
@@ -124,7 +125,7 @@
             class="border-2 p-2 w-full border-yellow-500" placeholder="nomination">
         </p>
         <p class="mt-3 ">
-          <button type="submit" mat-flat-button class="bg-yellow-500 w-full text-white">
+          <button type="submit" mat-raised-button class="bg-yellow-500 w-full text-white">
             <mat-icon>save</mat-icon> Save
           </button>
         </p>
@@ -165,13 +166,13 @@
       </tbody>
     </table>
     <!-- form affectation -->
-    <div class="w-1/4 text-center mx-auto">
+    <div class="w-1/4 ml-4 text-center mx-auto">
       <h1 class="text-2xl text-center" >Formaulaire d'affectation </h1>
       <form action="" (ngSubmit)="saveAffectation(affectation.id)">
         <p>
           <label for="eleve">Choisir un éléve </label> <br>
           <select required name="eleve" (change)="verifEleve()" [(ngModel)]="matriculeEleve"
-            class="border-2 w-90 p-2 border-yellow-500 rounded-md form-select">
+            class="border-2 w-full p-2 border-yellow-500 rounded-md form-select">
             <option value="" selected> -- choisir un éléve -- </option>
             <option *ngFor="let item of students" [value]="item.matricule">{{ item.name }} {{ item.lastName }}
               {{ item.date_naiss  }} </option>
@@ -180,7 +181,7 @@
         <p>
           <label for="eleve">Choisir une classe </label> <br>
           <select required name="classe" [(ngModel)]="codeClasse"
-            class="border-2 w-90  p-2 border-yellow-500 rounded-md form-select">
+            class="border-2 w-full  p-2 border-yellow-500 rounded-md form-select">
             <option value="" selected> -- choisir une classe -- </option>
             <option *ngFor="let item of classes" [value]="item.code">{{ item.code }} {{ item.nomination }} </option>
           </select>
