--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -1,1 +1,47 @@
-<p>classe works!</p>
+<div class="flex justify-between">
+    <!-- table -->
+    <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
+      <thead>
+        <tr>
+          <th class="p-4">Code</th>
+          <th class="p-4">Nomination</th>
+          <th class="p-4">actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="border-b border-2" *ngFor="let item of classes">
+          <td>{{ item.code }}</td>
+          <td>{{ item.nomination }}</td>
+          <td>
+            <button mat-button (click)="deleteClasse(item.code)" class="text-red-500 text-white">
+              <mat-icon>delete</mat-icon>
+            </button>
+            <button mat-button (click)="editClasse(item.code)" class="text-gray-500 text-white">
+              <mat-icon> edit </mat-icon>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- form  -->
+    <div class="form w-1/3">
+      <h1 class="text-2xl text-center" >Formulaire d'ajout d'une classe </h1>
+      <form action="" (ngSubmit)="saveClasse(classe.code)">
+        <p>
+          <label for="code">code</label> <br>
+          <input required type="text" [(ngModel)]="classe.code" name="code" id="code"
+            class="border-2 w-full p-2 border-yellow-500 rounded-md" placeholder="code">
+        </p>
+        <p>
+          <label for="nomination">nomination</label> <br>
+          <input required type="text" [(ngModel)]="classe.nomination" name="nomination" id="nomination"
+            class="border-2 p-2 w-full border-yellow-500" placeholder="nomination">
+        </p>
+        <p class="mt-3 ">
+          <button type="submit" mat-raised-button class="bg-yellow-500 w-full text-white">
+            <mat-icon>save</mat-icon> Save
+          </button>
+        </p>
+      </form>
+    </div>
+</div>
