--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,1 +1,65 @@
-<p>student works!</p>
+  <!-- eleve part -->
+  <div class="flex flex-wrap row justify-between items-start">
+    <!-- table -->
+    <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
+      <thead>
+        <tr>
+          <th class="p-4">Matricule</th>
+          <th class="p-4">Nom</th>
+          <th class="p-4">Prenom</th>
+          <th class="p-4">Date de naissance</th>
+          <th class="p-4">actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="border-b border-2" *ngFor="let item of students">
+          <td>{{ item.matricule }}</td>
+          <td>{{ item.name }}</td>
+          <td>{{ item.lastName }}</td>
+          <td>{{ item.date_naiss | date }}</td>
+          <td>
+            <button mat-button (click)="deleteEleve(item.matricule)" class="text-red-500 text-white">
+              <mat-icon>delete</mat-icon>
+            </button>
+            <button mat-button (click)="edit(item.matricule)" class="text-gray-500 text-white">
+              <mat-icon> edit </mat-icon>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- end of table -->
+    <!-- form part -->
+    <div class="form w-1/3">
+      <h1 class="text-2xl text-center" >Formulaire d'ajout d'un éléve </h1>
+      <form action="" (ngSubmit)="saveEleve(student.matricule)">
+        <p>
+          <label for="matricule">Matricule</label> <br>
+          <input required type="text" name="matricule" id="matricule"
+            class="border-2 w-full p-2 border-yellow-500 rounded-md" [(ngModel)]="student.matricule"
+            placeholder="matricule">
+        </p>
+        <p>
+          <label for="nom">Nom</label> <br>
+          <input required type="text" name="nom" id="nom" class="border-2 p-2 w-full border-yellow-500"
+            placeholder="nom" [(ngModel)]="student.name">
+        </p>
+        <p class="block ">
+          <label for="prenom">Prenom</label> <br>
+          <input required type="text" name="prenom" id="prenom" class="border-2 p-2 w-full border-yellow-500"
+            placeholder="prenom" [(ngModel)]="student.lastName">
+        </p>
+        <p class="block w-100">
+          <label for="date_naiss">Date de naissance</label> <br>
+          <input required type="date" name="date_naiss" id="date_naiss" class="border-2 w-full p-2 border-yellow-500"
+            [(ngModel)]="student.date_naiss">
+        </p>
+        <p class="mt-3 ">
+          <button type="submit" mat-raised-button class="bg-yellow-500 w-full text-white">
+            <mat-icon>save</mat-icon> Save
+          </button>
+        </p>
+      </form>
+    </div>
+    <!-- end of form part -->
+  </div>
