--- a/src/app/components/affectation/affectation.component.html
+++ b/src/app/components/affectation/affectation.component.html
@@ -1,6 +1,6 @@
-  <div class="flex justify-between">
+  <div class="flex flex-wrap justify-between">
     <!-- table affectation -->
-    <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-3/4">
+    <table class="table shadow-md table-auto border border-collapse	text-center w-3/4">
       <thead>
         <tr>
           <th class="p-4">Matricule eleve</th>
@@ -30,7 +30,7 @@
       </tbody>
     </table>
     <!-- form affectation -->
-    <div class="w-1/4 ml-4 text-center mx-auto">
+    <div class="w-1/4 text-center mx-auto">
       <h1 class="text-2xl text-center" >Formaulaire d'affectation </h1>
       <form action="" (ngSubmit)="saveAffectation(affectation.id)">
         <p>
