--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between">
+<div class="flex flex-wrap justify-between items-center">
     <!-- table -->
     <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
       <thead>
