--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="container">
+    <div class="flex justify-around flex-wrap p-5  items-center text-white">
+        <div class="w-64 h-64 bg-yellow-500 rounded-full flex items-center m-4 justify-center shadow-md text-2xl">
+            <a href="/eleve"> <mat-icon>person</mat-icon> Eleves </a>  
+        </div>
+        <div class="w-64 h-64 bg-yellow-500 rounded-full flex items-center m-4 justify-center shadow-md text-2xl">
+            <a href="/classe"><mat-icon>school</mat-icon> Classes</a>  
+        </div>
+        <div class="w-64 h-64 bg-yellow-500 rounded-full flex items-center m-4 justify-center shadow-md text-2xl">
+            <a href="/affectation"><mat-icon>work</mat-icon> Affectations </a>  
+        </div>
+    </div>
+</div>
