--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="bg-gray-600 text-center flex-wrap text-white flex justify-around items-center">
   <span class="text-2xl p-4">
-    Sama School App
+    <a href="/">Sama School App</a>
   </span>
   <nav>
     <ul class="flex items-center p-4 justify-center">
