--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,5 +1,5 @@
   <!-- eleve part -->
-  <div class="flex flex-wrap row justify-between items-start">
+  <div class="flex flex-wrap justify-between items-start">
     <!-- table -->
     <table class="table shadow-md table-auto border border-collapse	p-2 text-center w-2/4">
       <thead>
