--- a/src/app/components/affectation/affectation.component.html
+++ b/src/app/components/affectation/affectation.component.html
@@ -12,49 +12,52 @@
         </tr>
       </thead>
       <tbody>
-        <!-- <tr class="border-b border-2" *ngFor="let item of affectations ? null">
+        <tr class="border-b border-2" *ngFor="let item of affectations">
           <td>{{ item.eleve?.matricule }}</td>
-          <td>{{ item.eleve?.name }}</td>
-          <td>{{ item.eleve?.lastName }}</td>
+          <td>{{ item.eleve?.nom }}</td>
+          <td>{{ item.eleve?.prenom }}</td>
           <td>{{ item.classe.nomination }}</td>
           <td>{{ item.classe.code }}</td>
           <td>
-            <button mat-button (click)="deleteAffectation(item.id)" class="text-red-500 text-white">
+            <button mat-button (click)="deleteAffectation(item._id)" class="text-red-500 text-white">
               <mat-icon>delete</mat-icon>
             </button>
-            <button mat-button (click)="editAffectation(item.id)" class="text-gray-500 text-white">
+            <button mat-button (click)="editAffectation(item)" class="text-gray-500 text-white">
               <mat-icon> edit </mat-icon>
             </button>
           </td>
-        </tr> -->
+        </tr>
       </tbody>
     </table>
     <!-- form affectation -->
     <div class="w-1/4 text-center mx-auto">
-      <h1 class="text-2xl text-center" >Formaulaire d'affectation </h1>
-      <!-- <form action="" (ngSubmit)="saveAffectation(affectation.id)">
+      <h1 class="text-2xl text-center" >Formulaire d'affectation </h1>
+      <form action="" (ngSubmit)="saveAffectation(affectation._id)">
         <p>
           <label for="eleve">Choisir un éléve </label> <br>
-          <select required name="eleve" (change)="verifEleve()" [(ngModel)]="matriculeEleve"
+          <select required name="eleve"  [(ngModel)]="student"
             class="border-2 w-full p-2 border-yellow-500 rounded-md form-select">
             <option value="" selected> -- choisir un éléve -- </option>
-            <option *ngFor="let item of students" [value]="item.matricule">{{ item.name }} {{ item.lastName }}
-              {{ item.date_naiss  }} </option>
+            <option *ngFor="let item of students" [value]="item._id">{{ item.nom }} {{ item.prenom }}
+              {{ item.date_naiss }} </option>
           </select>
         </p>
         <p>
           <label for="eleve">Choisir une classe </label> <br>
-          <select required name="classe" [(ngModel)]="codeClasse"
+          <select required name="classe" [(ngModel)]="classe"
             class="border-2 w-full  p-2 border-yellow-500 rounded-md form-select">
             <option value="" selected> -- choisir une classe -- </option>
-            <option *ngFor="let item of classes" [value]="item.code">{{ item.code }} {{ item.nomination }} </option>
+            <option *ngFor="let item of classes" [value]="item._id">{{ item.code }} {{ item.nomination }} </option>
           </select>
         </p>
-        <p class="mt-3 ">
+        <p class="mt-3 flex justify-evenly">
           <button type="submit" mat-flat-button class="bg-yellow-500 w-90 text-white">
             <mat-icon>save</mat-icon> Save
           </button>
+          <button type="reset" mat-flat-button class="bg-red-500 w-90 text-white">
+            <mat-icon>cancel</mat-icon> Reset
+          </button>
         </p>
-      </form> -->
+      </form>
     </div>
   </div>
