--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -13,10 +13,10 @@
           <td>{{ item.code }}</td>
           <td>{{ item.nomination }}</td>
           <td>
-            <button mat-button (click)="deleteClasse(item.code)" class="text-red-500 text-white">
+            <button mat-button (click)="deleteClasse(item._id)" class="text-red-500 text-white">
               <mat-icon>delete</mat-icon>
             </button>
-            <button mat-button (click)="editClasse(item.code)" class="text-gray-500 text-white">
+            <button mat-button (click)="editClasse(item)" class="text-gray-500 text-white">
               <mat-icon> edit </mat-icon>
             </button>
           </td>
@@ -26,7 +26,7 @@
     <!-- form  -->
     <div class="form w-1/3">
       <h1 class="text-2xl text-center" >Formulaire d'ajout d'une classe </h1>
-      <form action="" (ngSubmit)="saveClasse(classe.code)">
+      <form action="" (ngSubmit)="saveClasse(classe._id)">
         <p>
           <label for="code">code</label> <br>
           <input required type="text" [(ngModel)]="classe.code" name="code" id="code"
