--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -37,9 +37,12 @@
           <input required type="text" [(ngModel)]="classe.nomination" name="nomination" id="nomination"
             class="border-2 p-2 w-full border-yellow-500" placeholder="nomination">
         </p>
-        <p class="mt-3 ">
-          <button type="submit" mat-raised-button class="bg-yellow-500 w-full text-white">
+        <p class="mt-3 flex justify-evenly ">
+          <button type="submit" mat-raised-button class="bg-yellow-500 text-white">
             <mat-icon>save</mat-icon> Save
+          </button>
+          <button type="reset" mat-raised-button class="bg-red-500 text-white">
+            <mat-icon>cancel</mat-icon> Annuler
           </button>
         </p>
       </form>
