--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -56,9 +56,12 @@
           <input required type="date" name="date_naiss" id="date_naiss" class="border-2 w-full p-2 border-yellow-500"
             [(ngModel)]="student.date_naiss">
         </p>
-        <p class="mt-3 ">
-          <button type="submit" mat-raised-button class="bg-yellow-500 w-full text-white">
+        <p class="mt-3 flex justify-evenly">
+          <button type="submit" mat-raised-button class="bg-yellow-500 text-white">
             <mat-icon>save</mat-icon> Save
+          </button>
+          <button type="reset" mat-raised-button class="bg-red-500 text-white">
+            <mat-icon>cancel</mat-icon> Annuler
           </button>
         </p>
       </form>
