--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,19 @@
-form{
-  transition: visibility 1s, opacity 0.9s linear
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+#form{
+  transition: visibility 1s, opacity 0.9s linear;
+  animation-name: pulse;
+  animation-fill-mode: both;
 }
