--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container mt-4 mx-auto">  
+<div class="container mx-auto">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
