--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="loader" *ngIf="authService.isLoading | async ">
+  <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
+</div>
 <div class="container">
   <div class="flex justify-around flex-wrap p-5 items-center" style="height: calc(100vh - 100px)  !important">
     <form action="#" (ngSubmit)="submit()" id="form" method="post" class="sm:w-full lg:w-2/4" *ngIf="show == true">
