--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,3 +1,6 @@
+<div class="loader" *ngIf="serviceEleve.isLoading | async ">
+  <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
+</div>
   <!-- eleve part -->
   <div class="flex flex-wrap justify-between items-start">
     <!-- table -->
