--- a/src/app/components/affectation/affectation.component.html
+++ b/src/app/components/affectation/affectation.component.html
@@ -1,5 +1,5 @@
 <div class="loader" *ngIf="serviceAffectation.isLoading | async ">
-  <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
+  <mat-progress-bar mode="query" color="accent"></mat-progress-bar>
 </div>
   <div class="flex flex-wrap justify-between m-4">
     <!-- table affectation -->
