--- a/src/app/components/classe/classe.component.html
+++ b/src/app/components/classe/classe.component.html
@@ -1,5 +1,5 @@
 <div class="loader" *ngIf="serviceClasse.isLoading | async ">
-  <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
+  <mat-progress-bar mode="query" color="accent"></mat-progress-bar>
 </div>
 <div class="flex flex-wrap justify-between items-center">
     <!-- table -->
