--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -1,22 +1,13 @@
-@import "../node_modules/@angular/material/theming";
+@import "~@angular/material/theming";
 
 @include mat-core();
 
-$my-primary: mat-palette($mat-teal, 600);
-$my-accent: mat-palette($mat-orange, 100);
-$my-warn: mat-palette($mat-red, 700);
-$my-theme: mat-light-theme
-  (
-    (
-      color: (
-        primary: $my-primary,
-        accent: $my-accent,
-        warn: $my-warn,
-      )
-    )
-  );
-@include mat.core-theme($my-theme);
-// @include angular-material-theme($my-theme);
+$my-primary: mat-palette($mat-gray, 800);
+$my-accent: mat-palette($mat-orange, 400);
+$my-warn: mat-palette($mat-red, 500);
+
+$my-theme : mat-light-theme($my-primary,$my-accent,$my-warn);
+@include angular-material-theme($my-theme);
 
 // .alternative {
 //   $my-primary: mat-palette($mat-teal, 800);
