--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,13 +5,13 @@
   <nav class="w-2/4">
     <ul class="flex items-center p-4 justify-center">
       <li>
-      <a [routerLink]="['/eleve']" routerLinkActive="text-yellow-500" mat-button><mat-icon>person</mat-icon> Eleves </a>
+      <a [routerLink]="['/backoffice/eleve']" routerLinkActive="text-yellow-500" mat-button><mat-icon>person</mat-icon> Eleves </a>
       </li>
       <li>
-        <a [routerLink]="['/classe']" routerLinkActive="text-yellow-500" mat-button><mat-icon>school</mat-icon> Classes </a>
+        <a [routerLink]="['/backoffice/classe']" routerLinkActive="text-yellow-500" mat-button><mat-icon>school</mat-icon> Classes </a>
         </li>
         <li>
-          <a [routerLink]="['/affectation']" routerLinkActive="text-yellow-500"   mat-button><mat-icon>work</mat-icon> Affectations </a>
+          <a [routerLink]="['/backoffice/affectation']" routerLinkActive="text-yellow-500"   mat-button><mat-icon>work</mat-icon> Affectations </a>
         </li>
     </ul>
   </nav>
