--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,5 +1,5 @@
 <div class="loader" *ngIf="serviceEleve.isLoading | async ">
-  <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
+  <mat-progress-bar mode="query" color="accent"></mat-progress-bar>
 </div>
   <!-- eleve part -->
   <div class="flex flex-wrap justify-between items-start">
